--- a/groot-backend/django/code/configurations/config-stencil.yml
+++ b/groot-backend/django/code/configurations/config-stencil.yml
@@ -5,7 +5,7 @@ SECRET_KEY: ""
 DEBUG: ""
 
 DATABASE:
-    ENGINE: "django.db.backends.mysql"
+    ENGINE: "django.db.backends.postgresql_psycopg2"
     NAME: ""
     USER: ""
     PASSWORD: ""
