--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: '3.8'
 services:
     db:
         restart: always
-        build: ./postgresql
+        build: ./groot-backend/postgresql
         container_name: groot_db
         env_file: 
-            - ./postgresql/database.env
+            - ./groot-backend/postgresql/database.env
         expose: 
             - 5432
         volumes: 
@@ -16,7 +16,7 @@ services:
     
     redis:
         restart: always
-        build: ./redis
+        build: ./groot-backend/redis
         container_name: groot_redis
         expose:
             - 6379
@@ -25,13 +25,13 @@ services:
     
     web:
         restart: always
-        build: ./django
+        build: ./groot-backend/django
         container_name: groot_web
         command: sh -c "python manage.py runserver 0.0.0.0:8000"
         volumes: 
-            - ./django/code:/code/
-            - ./static/:/static/
-            - ./media/:/media/
+            - ./groot-backend/django/code/:/code/
+            - ./groot-backend/static/:/static/
+            - ./groot-backend/media/:/media/
         expose:
             - 8000
         ports:
@@ -40,6 +40,22 @@ services:
             - db
             - redis
         networks:
+            groot_network:
+    
+    frontend:
+        restart: always
+        build: ./groot-frontend
+        container_name: groot_frontend
+        command: sh -c "yarn start"
+        volumes: 
+            - ./groot-frontend/groot/:/groot/
+        expose:
+            - 3000
+        ports: 
+            - "50000:3000"
+        depends_on: 
+            - web
+        networks: 
             groot_network:
 
 volumes: 
