--- a/groot-frontend/groot/package.json
+++ b/groot-frontend/groot/package.json
@@ -22,7 +22,7 @@
     "ws": "^7.5.0"
   },
   "scripts": {
-    "start": "BROWSER=google-chrome-stable react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
