[Backend, Frontend] Added Redux and Docker update - Added redux to the frontend - Changed some volume binds in Dockerfile and added maintainer metadata

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
         command: sh -c "yarn start"
         volumes: 
             - ./groot-frontend/groot/:/groot/
+            - ./groot-frontend/groot/node_modules/:/groot/node_modules/
         expose:
             - 3000
         ports: 
