--- a/groot-backend/postgresql/Dockerfile
+++ b/groot-backend/postgresql/Dockerfile
@@ -1,2 +1,5 @@
 # pull the official base image from docker-hub
 FROM postgres:latest
+
+# add maintainer label (meta-data)
+LABEL maintainer="Ayushman Tripathy <https://github.com/ayushmantripathy9>"
