--- a/groot-frontend/groot/package.json
+++ b/groot-frontend/groot/package.json
@@ -14,6 +14,7 @@
     "randomstring": "^1.2.1",
     "react": "^17.0.2",
     "react-cookies": "^0.1.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
