[Deployment] Conf files changes - Minor changes in conf files

--- a/nginx/conf.d/includes/application.conf
+++ b/nginx/conf.d/includes/application.conf
@@ -2,7 +2,7 @@
 
 location /ws {
 
-    # Reverse proxy pass to the upstream Daphne Server
+    # Reverse proxy pass to the upstream Backend Server
     proxy_pass              http://web:8000/ws;
 
     # Specify headers to upgrade connection from HTTP to WS
@@ -20,7 +20,7 @@ location /ws {
 # Backend API endpoint forwarding
 location /api {
 
-    # Reverse proxy pass to th upstream Gunicorn Server
+    # Reverse proxy pass to th upstream Backend Server
     proxy_pass              http://web:8000/api;
 
     # Time before NGINX throws a 504: Gateway Timeout
@@ -35,7 +35,7 @@ location /api {
 
 location /admin {
 
-    # Reverse proxy pass to th upstream Gunicorn Server
+    # Reverse proxy pass to th upstream Backend Server
     proxy_pass              http://web:8000/admin;
 
     # Time before NGINX throws a 504: Gateway Timeout
