--- a/groot_build/production.yml
+++ b/groot_build/production.yml
@@ -27,9 +27,8 @@ services:
         restart: always
         build: ../groot-backend/django
         container_name: groot_web
-        command: sh -c "python manage.py collectstatic --no-input && python manage.py runserver 0.0.0.0:8000"
+        command: sh -c "python manage.py collectstatic --no-input  && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
         volumes: 
-            - ../groot-backend/django/code/:/code/
             - ../groot-backend/static/:/static/
             - ../groot-backend/media/:/media/
         expose:
@@ -41,13 +40,10 @@ services:
             groot_network:
     
     frontend:
-        restart: always
         build: ../groot-frontend
         container_name: groot_frontend
         command: sh -c "yarn build"
         volumes: 
-            - ../groot-frontend/groot/:/groot/
-            - ../groot-frontend/groot/node_modules/:/groot/node_modules/
             - frontend_build:/groot/build/
         expose:
             - 3000
@@ -65,10 +61,11 @@ services:
             - 80
             - 443
         ports:
-            - "80:80"
-            - "443:443"
+            # - "80:80"
+            # - "443:443"
+            - "50069:80"
+            - "51069:443"
         volumes:
-            - ../nginx/conf.d/:/etc/nginx/conf.d/
             - ../nginx/ssl/:/etc/nginx/ssl/
             - static:/groot_static/
             - media:/groot_media/
