--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -7,7 +7,7 @@ server {
     listen                      80;
     listen                      443         default_server          ssl;
 
-    ssl_certificate             /etc/nginx/ssl/certificate.cert;
+    ssl_certificate             /etc/nginx/ssl/certificate.crt;
     ssl_certificate_key         /etc/nginx/ssl/certificate.prv;
 
     charset                     utf-8;
@@ -22,7 +22,7 @@ server {
     # All location blocks for assets
     include                     conf.d/includes/assets.conf;
 
-    # Forward request to Gunicorn or Daphne servers
+    # Request is forwaded to Backend server
     include                     conf.d/includes/application.conf;
 
     # Serve frontend
