[Nginx] Added Nginx Docs

--- a/nginx/conf.d/includes/assets.conf
+++ b/nginx/conf.d/includes/assets.conf
@@ -1,4 +1,4 @@
-# Media files
+# Media Files
 location /api_media/ {
     autoindex       on;
     alias           /groot_media/;
@@ -6,7 +6,7 @@ location /api_media/ {
     access_log      off;
 }
 
-# Static files
+# Static Files
 location /api_static/ {
     autoindex       on;
     alias           /groot_static/;
