--- a/nginx/conf.d/includes/frontend.conf
+++ b/nginx/conf.d/includes/frontend.conf
@@ -1,4 +1,4 @@
-# Serve frontend
+# Serve the frontend from the specified directory in the container
 location / {
     root                    /groot_frontend;
     index                   index.html;
