--- a/nginx/conf.d/includes/app_server.conf
+++ b/nginx/conf.d/includes/app_server.conf
@@ -1,4 +1,4 @@
-# Set additional headers while communicating with application server
+# Setting up additional headers
 
 proxy_set_header        Host                $host;
 proxy_set_header        X-Real-IP           $remote_addr;
