--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -1,9 +1,9 @@
-# Configuration file for reverse proxy server of Floo
+# Configuration file for Groot reverse-proxy-server
 
-# Configuration of the server
+# The Server Config
 server {
 
-    # The port that will be exposed to the outer world
+    # The exposed port
     listen                      80;
     listen                      443         default_server          ssl;
 
@@ -12,20 +12,19 @@ server {
 
     charset                     utf-8;
 
-    # Max upload size
     client_max_body_size        64M;
 
-    # Include support for MIME Types
+    # Including support for MIME Types
     include                     mime.types;
     default_type                application/octet-stream;
 
-    # All location blocks for assets
+    # Location blocks for assets
     include                     conf.d/includes/assets.conf;
 
-    # Request is forwaded to Backend server
+    # Forwading requests to the backend server
     include                     conf.d/includes/application.conf;
 
-    # Serve frontend
+    # Serving the frontend
     include                     conf.d/includes/frontend.conf;
 
 }
