--- a/groot-backend/django/code/configurations/config-stencil.yml
+++ b/groot-backend/django/code/configurations/config-stencil.yml
@@ -21,6 +21,27 @@ ALLOWED_HOSTS:
 CORS_ALLOWED_ORIGINS:
     - ""
 
+
 CHANNEL_LAYER:
     HOST: ''
     PORT: ''
+
+
+# Google OAuth credentials
+GOOGLE:
+    CLIENT_ID: 
+    CLIENT_SECRET:     
+
+
+# GitHub OAuth credentials
+GITHUB:
+    CLIENT_ID: 
+    CLIENT_SECRET: 
+
+
+# Redirect URL to which user would be redirected by the OAuth Provider after login
+FRONTEND:
+    REDIRECT_URI: 
+
+
+DEFAULT_PROFILE_PIC: https://drive.google.com/file/d/1XoSKMZ0ffHXw6e7nRwU9txVHnBJcK0Qu/view?usp=sharing
